--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "next": "15.0.3",
     "react": "^18.2.0",
