--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.8",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
+    "keen-slider": "^6.8.6",
     "next": "15.0.3",
     "next-seo": "^6.6.0",
     "react": "^18.2.0",
